Add-pages feature added

--- a/wiki/wiki/encyclopedia/static/encyclopedia/styles.css
+++ b/wiki/wiki/encyclopedia/static/encyclopedia/styles.css
@@ -16,6 +16,10 @@ textarea {
     height: 90vh;
     width: 80%;
 }
+#title{
+    height: 10px;
+    width:  20px;
+}
 
 .main {
     padding: 10px;
